fixed vw on larger monitors to remove horizontal scroll

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -11,6 +11,7 @@
     height: calc(100vh - 80px);
     max-height: calc(100vh - 80px);
     overflow: hidden;
+    width: 100vw;
 
     // * {
         // border: 1px solid black;
@@ -236,6 +237,8 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        width: 100vw;
+
         // border: 1px solid black;
 
         h1 {
